tests/idris2/error/perror014/ParseList.idr
list : List Nat
list
  = [ 0
    , 1
    , 2
    , 3
    , 4,
    , 5
    ]
